--- a/index.html
+++ b/index.html
@@ -133,31 +133,70 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images_new/work-1.jpg">
-                <div class="layer">
-                    <h3>Python Projects</h3>
-                    <p> <p>
-                    <a href="https://github.com/QianqianYang11?tab=repositories&q=&type=&language=python&sort="><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="work-content">
+                    <img src="images_new/work-1.jpg" alt="Course Paper">
+                    <div class="layer">
+                        <h3>Python: Financial Modeling, Data analysis, and Machine Learning</h3>
+                        <p>This summary highlights the key Python skills applied across various financial and data analysis projects. These projects have involved data cleaning and transformation, building financial models, implementing statistical methods, applying machine learning algorithms, and creating insightful visualizations to support data-driven decision-making.
+
+                        </p>
+                    </div>
+                </div>
+                <div class="work-description">
+                    <p style="margin-top: 15px; font-size: 22px;margin-bottom: 15px; color: 823D32; font-weight: bold;">Take Aways </p>
+                    <p style="font-size: 18px; line-height: 1.5;">
+                        ● Data analysis includes cleaning, transforming, and analyzing large datasets, ensuring that raw data is ready for insightful analysis. <br>
+                        ● Financial modeling in Python involves using libraries such as NumPy and Pandas to structure financial data and build models that forecast trends and optimize portfolios. <br>
+                        ● Statistical methods such as OLS regression are regularly used to analyze relationships between financial variables and create predictive models. <br>
+                        ● Machine learning algorithms like and decision trees are utilized to predict financial outcomes such as stock and commodity price movements, based on training and testing data patterns. <br>
+                        ● Visualizations in Python help present financial data clearly, using tools like Seaborn and Plotly to create interactive graphs that help stakeholders understand trends, correlations, and performance metrics.
+                        </p>
+                        <a href="https://github.com/QianqianYang11?tab=repositories&q=&type=&language=python&sort=" class="btn" style="margin-bottom: 5px; margin-top: 15px;">See More</a>
                 </div>
             </div>
             <div class="work">
-                <img src="images_new/work-2.jpg">
-                <div class="layer">
-                    <h3>PowerBI</h3>
-                    <p> <p>
-                    <a href="https://github.com/QianqianYang11?tab=repositories&q=Powerbi&type=&language=&sort="><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="work-content">
+                    <img src="images_new/work-2.jpg" alt="PowerBI">
+                    <div class="layer">
+                        <h3>PowerBI: Data Visualizations and Interactive Dashboards</h3>
+                        <p>This summary highlights my Power BI skills and their application to various data visualization and reporting projects. These projects demonstrate my ability to work with real-time data, conduct in-depth analysis, and create interactive dashboards to support decision-making.
+                        </p>
+                    </div>
+                </div>
+                <div class="work-description">
+                    <p style="margin-top: 15px; font-size: 22px;margin-bottom: 15px; color: 823D32; font-weight: bold;">Take Aways </p>
+                    <p style="font-size: 18px; line-height: 1.5;">
+                        ● Data visualization in Power BI involves creating interactive dashboards that allow users to explore and analyze data across various dimensions, such as stock prices, sales performance, and commodity returns.<br>
+                        ● Power BI is utilized to track and visualize real-time data, such as live stock prices, by connecting to APIs and external data sources to keep reports updated automatically.<br>
+                        ● Predictive analysis is applied in Power BI, with the use of data transformations and calculations, enabling stakeholders to understand future trends and make data-driven decisions.<br>
+                        ● Dashboards and reports are designed to provide clear insights into complex data, using features like slicers, filters, and custom visuals to present key performance metrics effectively.<br>
+                        ● Power BI reports are created to track various financial assets and their performance, including detailed analysis of stock prices, commodity returns, and sales metrics for different businesses and sectors.<br>
+                        </p>
+                        <a href="https://github.com/QianqianYang11?tab=repositories&q=Powerbi&type=&language=&sort=" class="btn" style="margin-bottom: 5px; margin-top: 15px;">See More</a>
                 </div>
             </div>
             <div class="work">
-                <img src="images_new/work-3.jpg">
-                <div class="layer">
-                    <h3>Java Projects</h3>
-                    <p> <p>
-                    <a href="https://github.com/QianqianYang11?tab=repositories&q=&type=&language=html&sort="><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="work-content">
+                    <img src="images_new/work-3.jpg" alt="Java Projects">
+                    <div class="layer">
+                        <h3>Java, CSS, HTML: Frontend Development, Web Design, and App Development</h3>
+                        <p> This summary highlights my skills in Java, CSS, and HTML, which I have applied to frontend development, web design, and app development. These technologies enable me to create dynamic, responsive, and visually appealing web applications with a focus on user experience.
+                        </p>
+                    </div>
+                </div>
+                <div class="work-description">
+                    <p style="margin-top: 15px; font-size: 22px;margin-bottom: 15px; color: 823D32; font-weight: bold;">Take Aways </p>
+                    <p style="font-size: 18px; line-height: 1.5;">
+                        ● Java, CSS, and HTML are utilized in combination to build dynamic, responsive, and user-friendly websites and applications, ensuring both functionality and design are seamless.<br>
+                        ● I leverage CSS for styling and layout, using techniques like flexbox and grid, while HTML provides the structure, ensuring accessibility and SEO optimization.<br>
+                        ● Java is applied to create interactive components, such as forms and event-driven actions, while CSS and HTML handle the visual presentation and content organization.<br>
+                        ● CSS animations and transitions are integrated to enhance user experience, providing smooth, engaging visual effects.<br>
+                        ● I use modern HTML5 features to include multimedia elements, improving interactivity and providing rich content across devices and screen sizes.<br>
+                        </p>
+                        <a href="https://github.com/QianqianYang11?tab=repositories&q=&type=&language=html&sort=" class="btn" style="margin-bottom: 5px; margin-top: 15px;">See More</a>
                 </div>
             </div>
         </div>
-        <a href="https://github.com/QianqianYang11?tab=repositories" class="btn">See more</a>
     </div>
 </div>
 <!-- ---------------------contact----------------- -->
