--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
                 <div class="work-content">
                     <img src="images_new/work-1.jpg" alt="Course Paper">
                     <div class="layer">
-                        <h3>Python: Financial Modeling, Data analysis, and Machine Learning</h3>
-                        <p>This summary highlights the key Python skills applied across various financial and data analysis projects. These projects have involved data cleaning and transformation, building financial models, implementing statistical methods, applying machine learning algorithms, and creating insightful visualizations to support data-driven decision-making.
-
+                        <h3>Python</h3>
+                        <p>Financial Modeling, Data Analysis, and Machine Learning
                         </p>
                     </div>
                 </div>
