--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
+                            <li><span>2024-Current | Finance Intern | Gaddr</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
+                                ● Supported bookkeeping tasks and maintained organized financial records;<br>
+                                ● Contributed to cost and value pricing strategies for AI platforms.
+                                </li>
                             <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
                                 ● Organized workshops and training sessions to enhance learning outcomes;<br>
                                 ● Prepared reports about client recommendations and strategic action plans.
@@ -92,7 +96,7 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2024-now | University of Gothenburg | Master in IT & Learning</span><br>● Modules: Web Design; Digital Technologies; Data Analysis.</li>
+                            <li><span>2024-2024 | University of Gothenburg | Course</span><br>● GPA: VG<br>● Modules: Technology, Education, and Learning.</li>
                             <li><span>2023-2024 | Lund University | Master in Finance</span><br>● GPA: B/A-U Scale<br>● Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
                             <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>● GPA: 3.51/4<br>● Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
                         </ul>
