--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p> Hello! I'm Qianqian, a finance graduate from Lund University. I am currently based in Gothenburg, Sweden and I am open for relocation. With experience in consulting and equity research, I am skilled in communication and financial analysis. I am a social person who thrives in cross-functional environments. My passion for business and IT area drives my commitment to continuous learning and personal growth, and I look forward to new opportunities ahead. </p>
+                <p> Hello! I'm Qianqian, a finance graduate from Lund University. I am currently based in Dubai, UAE and I am open for relocation. With experience in consulting and equity research, I am skilled in communication and financial analysis. I am a social person who thrives in cross-functional environments. My passion for business and IT area drives my commitment to continuous learning and personal growth, and I look forward to new opportunities ahead. </p>
                     <div class="tab-titles">
                         <p class="tab-links" data-tab="skills" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" data-tab="experience" onclick="opentab('experience')">Experience</p>
