--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2024-Current | Finance Intern | Gaddr</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
+                            <li><span>2024-Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
                                 ● Supported bookkeeping tasks and maintained organized financial records;<br>
                                 ● Contributed to cost and value pricing strategies for AI platforms.
                                 </li>
-                            <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
+                            <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting | China</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
                                 ● Organized workshops and training sessions to enhance learning outcomes;<br>
                                 ● Prepared reports about client recommendations and strategic action plans.
                                 </li>
-                            <li><span>2021-2021 | Equity Research Intern | China Securities</span><br>● Collected financial data and macroeconomic data through the database;<br>
+                            <li><span>2021-2021 | Equity Research Intern | China Securities | China</span><br>● Collected financial data and macroeconomic data through the database;<br>
                                 ● Performed financial analysis, competitive analysis, and company valuation;<br>
                                 ● Wrote research reports by typesetting, drawing, and summarizing.
                                 </li>
-                            <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank</span><br>● Participated in the customer guidance at the bank;<br>
+                            <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank | China</span><br>● Participated in the customer guidance at the bank;<br>
                                 ● Promoted and sold financial products of debt to customers;<br>
                                 ● Collected data about rural debt and input the data into the bank system.
                                 </li>
@@ -80,15 +80,15 @@
                     </div>
                     <div class="tab-contents" id="part-time">
                         <ul>
-                            <li><span>2024-2024 | Part-time Distributor | Svensk Direktreklam</span><br>● Delivered newspapers and advertisements to the mailboxes;<br>
+                            <li><span>2024-2024 | Part-time Distributor | Svensk Direktreklam | Sweden</span><br>● Delivered newspapers and advertisements to the mailboxes;<br>
                                 ● Updated and submitted distribution status on the company website;<br>
                                 ● Assisted with additional distribution tasks during staff shortages.
                                 </li>
-                            <li><span>2021-2021 | Education Intern | Xinjiang Education Bureau</span><br>● Developed and provided teaching materials for pre-school education;<br>
+                            <li><span>2021-2021 | Education Intern | Xinjiang Education Bureau | China</span><br>● Developed and provided teaching materials for pre-school education;<br>
                                 ● Arranged extracurricular activities to foster teamwork among kids;<br>
                                 ● Offered teaching initiatives on-site for preschool students.
                                 </li>
-                            <li><span>2020-2021 | Marketing Assistant | Hebei University of Technology</span><br>● Produced publicity videos and digital content for online platforms;<br>
+                            <li><span>2020-2021 | Marketing Assistant | Hebei University of Technology | China</span><br>● Produced publicity videos and digital content for online platforms;<br>
                                 ● Organized alumni interviews and lecturer events;<br>
                                 ● Delivered presentations about the marketing performance.
                                 </li>
