--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2024-2024 | University of Gothenburg | Course</span><br>● GPA: VG<br>● Modules: Technology, Education, and Learning.</li>
-                            <li><span>2023-2024 | Lund University | Master in Finance</span><br>● GPA: B/A-U Scale<br>● Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
-                            <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>● GPA: 3.51/4<br>● Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
+                            <li><span>2024-2024 | University of Gothenburg | Course | Sweden</span><br>● GPA: VG<br>● Modules: Technology, Education, and Learning.</li>
+                            <li><span>2023-2024 | Lund University | Master in Finance | Sweden</span><br>● GPA: B/A-U Scale<br>● Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
+                            <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance | China</span><br>● GPA: 3.51/4<br>● Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
                         </ul>
                     </div>
             </div>
