--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
+                            <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | China</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
+                                ● Organized workshops and training sessions to enhance learning outcomes;<br>
+                                ● Prepared reports about client recommendations and strategic action plans.
+                                </li>
                             <li><span>2024-Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
                                 ● Supported bookkeeping tasks and maintained organized financial records;<br>
                                 ● Contributed to cost and value pricing strategies for AI platforms.
-                                </li>
-                            <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting | China</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
-                                ● Organized workshops and training sessions to enhance learning outcomes;<br>
-                                ● Prepared reports about client recommendations and strategic action plans.
                                 </li>
                             <li><span>2021-2021 | Equity Research Intern | China Securities | China</span><br>● Collected financial data and macroeconomic data through the database;<br>
                                 ● Performed financial analysis, competitive analysis, and company valuation;<br>
