--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | China</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
-                                ● Organized workshops and training sessions to enhance learning outcomes;<br>
-                                ● Prepared reports about client recommendations and strategic action plans.
+                            <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | UAE</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
+                                ● Prepared and filed expense statements for company operations;<br>
+                                ● Managed fund transfers to support business operations.
                                 </li>
                             <li><span>2024-Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
                                 ● Supported bookkeeping tasks and maintained organized financial records;<br>
