--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | UAE</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
-                                ● Prepared and filed expense statements for company operations;<br>
+                                ● Prepared and filed expense statements of 3 projects for company operations;<br>
                                 ● Managed fund transfers to support business operations.
                                 </li>
                             <li><span>2024-Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
