--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <a href="https://www.instagram.com/yu.yu2673/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=61551016870464%5C"><i class="fa-brands fa-facebook"></i></a>
                 </div>
-                <a href="images/My-CV.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/CV-Qianqian.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
