--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
+                            <li><span>2025-Current | Budget Specialist | ZPMC | Dubai</span><br>● Annual budget planning;<br>
+                                ● Cost control;<br>
+                                ● Performance assessing.
+                                </li>
+                            <li><span>2025-Current | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
+                                ● Projct cost control;<br>
+                                ● tax.
+                                </li>
                             <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | UAE</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
                                 ● Prepared and filed expense statements of 3 projects for company operations;<br>
                                 ● Managed fund transfers to support business operations.
@@ -67,14 +75,6 @@
                             <li><span>2024-Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
                                 ● Supported bookkeeping tasks and maintained organized financial records;<br>
                                 ● Contributed to cost and value pricing strategies for AI platforms.
-                                </li>
-                            <li><span>2021-2021 | Equity Research Intern | China Securities | China</span><br>● Collected financial data and macroeconomic data through the database;<br>
-                                ● Performed financial analysis, competitive analysis, and company valuation;<br>
-                                ● Wrote research reports by typesetting, drawing, and summarizing.
-                                </li>
-                            <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank | China</span><br>● Participated in the customer guidance at the bank;<br>
-                                ● Promoted and sold financial products of debt to customers;<br>
-                                ● Collected data about rural debt and input the data into the bank system.
                                 </li>
                         </ul>
                     </div>
