--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 </li>
                             <li><span>2025-Current | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
                                 ● Projct cost control;<br>
-                                ● tax.
+                                ● Tax.
                                 </li>
                             <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | UAE</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
                                 ● Prepared and filed expense statements of 3 projects for company operations;<br>
