--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Communication</span><br>Communication: English and Mandarin</li>
+                            <li><span>Communication</span><br>language: English and Mandarin</li>
                             <li><span>Financial Analysis</span><br>Financial Modeling & Data Analysis: Python</li>
                             <li><span>Web Design</span><br>Frontend Web Development: Java, HTML, CSS</li>
                         </ul>
