--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Communication</span><br>language: English and Mandarin</li>
-                            <li><span>Financial Analysis</span><br>Financial Modeling & Data Analysis: Python</li>
-                            <li><span>Web Design</span><br>Frontend Web Development: Java, HTML, CSS</li>
+                            <li><span>Language</span><br>language: English and Mandarin</li>
+                            <li><span>Finance</span><br>SAP & Excel</li>
+                            <li><span>Coding</span><br>Python & Java, HTML, CSS</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
