--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2025-Current | Budget Specialist | ZPMC | Dubai</span><br>● Annual budget planning;<br>
+                            <li><span>2025 Apr-Current | Budget Specialist | ZPMC | Dubai</span><br>● Annual budget planning;<br>
                                 ● Cost control;<br>
                                 ● Performance assessing.
                                 </li>
-                            <li><span>2025-Current | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
+                            <li><span>2025 Apr-2025 Sep | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
                                 ● Projct cost control;<br>
                                 ● Tax.
                                 </li>
-                            <li><span>2025-Current | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | UAE</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
+                            <li><span>2025 Jan-2025 Mar | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | Dubai</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
                                 ● Prepared and filed expense statements of 3 projects for company operations;<br>
                                 ● Managed fund transfers to support business operations.
                                 </li>
