--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Language</span><br>English and Mandarin</li>
+                            <li><span>Language</span><br>English & Mandarin</li>
                             <li><span>Finance</span><br>SAP & Excel</li>
                             <li><span>Coding</span><br>Python & Java, HTML, CSS</li>
                         </ul>
