--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2025 Apr-Current | Budget Specialist | ZPMC | Dubai</span><br>● Annual budget planning;<br>
-                                ● Cost control;<br>
-                                ● Performance assessing.
+                            <li><span>2025 Apr - Current | Budget Specialist | ZPMC | Dubai</span><br>● Developed and monitored annual and project-based budgets;<br>
+                                ● Implemented cost control measures to optimize resource allocation and reduce variances;<br>
+                                ●  Conducted performance assessments and provided analytical reports to support management decisions.
                                 </li>
-                            <li><span>2025 Apr-2025 Sep | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
+                            <li><span>2025 Apr - 2025 Sep | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
                                 ● Projct cost control;<br>
                                 ● Tax.
                                 </li>
-                            <li><span>2025 Jan-2025 Mar | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | Dubai</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
+                            <li><span>2025 Jan - 2025 Mar | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | Dubai</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
                                 ● Prepared and filed expense statements of 3 projects for company operations;<br>
                                 ● Managed fund transfers to support business operations.
                                 </li>
-                            <li><span>2024-Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
+                            <li><span>2024 - Current | Finance Intern | Gaddr | Remote</span><br>● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
                                 ● Supported bookkeeping tasks and maintained organized financial records;<br>
                                 ● Contributed to cost and value pricing strategies for AI platforms.
                                 </li>
