--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                         <ul>
                             <li><span>2025 Apr - Current | Budget Specialist | ZPMC | Dubai</span><br>● Developed and monitored annual and project-based budgets;<br>
                                 ● Implemented cost control measures to optimize resource allocation and reduce variances;<br>
-                                ●  Conducted performance assessments and provided analytical reports to support management decisions.
+                                ● Conducted performance assessments and provided analytical reports to support management decisions.
                                 </li>
-                            <li><span>2025 Apr - 2025 Sep | Accountant | ZPMC | Dubai</span><br>● SAP create AP and outgoing;<br>
-                                ● Projct cost control;<br>
-                                ● Tax.
+                            <li><span>2025 Apr - 2025 Sep | Accountant | ZPMC | Dubai</span><br>● Processed accounts payable and outgoing payments in SAP;<br>
+                                ● Monitored project costs and collaborated with departments to ensure budget adherence;<br>
+                                ● Handled tax documentation and supported month-end closing
                                 </li>
                             <li><span>2025 Jan - 2025 Mar | Settlement Specialist  | Ox Accounting & Bookkeeping LLC (CPT Market) | Dubai</span><br>● Verified 200+ financial transactions daily to ensure accuracy and compliance;<br>
                                 ● Prepared and filed expense statements of 3 projects for company operations;<br>
