--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li>
-                            <span>2025.4 - Now | Budget Specialist | ZPMC | Dubai</span><br>
+                            <span>2025.4-Now | Budget Specialist | ZPMC | Dubai</span><br>
                             <em><strong>Operations & Management Department</strong></em><br>
                             ● Developed and monitored annual and project-based budgets;<br>
                             ● Implemented cost control measures to optimize budget utilization;<br>
                             ● Conducted performance assessments and provided analytical reports.
                             </li>
                             <li>
-                            <span>2025.4 - 2025.9 | Accountant | ZPMC | Dubai</span><br>
+                            <span>2025.4-2025.9 | Accountant | ZPMC | Dubai</span><br>
                             <em><strong>Finance & Treasury Department</strong></em><br>
                             ● Processed accounts payable and outgoing payments in SAP;<br>
                             ● Monitored project costs to ensure budget adherence;<br>
                             ● Handled tax documentation and supported month-end closing.
                             </li>
                             <li>
-                            <span>2025.1 - 2025.3 | Settlement Specialist | Ox Accounting & Bookkeeping LLC | Dubai</span><br>
+                            <span>2025.1-2025.3 | Settlement Specialist | Ox Accounting & Bookkeeping LLC | Dubai</span><br>
                             <em><strong>Shared Service Finance Department</strong></em><br>
                             ● Processed financial transactions daily;<br>
                             ● Prepared and filed expense statements of 3 projects;<br>
                             ● Managed fund transfers to support business operations.
                             </li>
                             <li>
-                            <span>2024.11 - 2025.1 | Finance Intern | Gaddr | Remote</span><br>
+                            <span>2024.11-2025.1 | Finance Intern | Gaddr | Remote</span><br>
                             <em><strong>Finance Department</strong></em><br>
                             ● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
                             ● Supported bookkeeping tasks and maintained organized financial records;<br>
