--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                     </div>
                     <div class="tab-contents" id="part-time">
                         <ul>
-                            <li><span>2024-2024 | Part-time Distributor | Svensk Direktreklam | Sweden</span><br>● Delivered newspapers and advertisements to the mailboxes;<br>
-                                ● Updated and submitted distribution status on the company website;<br>
-                                ● Assisted with additional distribution tasks during staff shortages.
+                            <li><span>2024.11-2025.1 | Finance Intern | Gaddr | Remote</span><br>
+                            ● Conducted budgeting, financial analysis, and forecasting for Swedish startup projects;<br>
+                            ● Supported bookkeeping tasks and maintained organized financial records;<br>
+                            ● Contributed to cost and value pricing strategies for AI platforms.
                                 </li>
                             <li><span>2021-2021 | Education Intern | Xinjiang Education Bureau | China</span><br>● Developed and provided teaching materials for pre-school education;<br>
                                 ● Arranged extracurricular activities to foster teamwork among kids;<br>
