--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p> Hello! I'm Qianqian, budget specialist at ZPMC Middle East and finance graduate from Lund University. From China and base Dubai, I am experienced in budget planning, cost control, and accounting. My passion for business and IT drives my continuous learning and growth, and I look forward to new opportunities ahead. 😀 💪 </p>
+                <p> Hello! I'm Qianqian, budget specialist at ZPMC Middle East and finance graduate from Lund University. From China and base Dubai, I am experienced in accounting，budget planning, and cost control. My passion for business and IT drives my continuous learning and growth, and I look forward to new opportunities ahead. 😀 💪 </p>
                     <div class="tab-titles">
                         <p class="tab-links" data-tab="skills" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" data-tab="experience" onclick="opentab('experience')">Experience</p>
