--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Language</span><br>English & Mandarin</li>
-                            <li><span>Finance</span><br>SAP & Excel</li>
+                            <li><span>Finance</span><br>SAP & Excel & VBA</li>
                             <li><span>Coding</span><br>Python & Java, HTML, CSS</li>
                         </ul>
                     </div>
