--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <div class="header-text">
             <p class="finance-text">Budget Specialist</p>
-            <h1>Hi, I'm <span>Qianqian杨倩倩</span><br><span class="dive-text"> Dive into my work here!</span></h1>
+            <h1>Hi, I'm <span>Qianqian</span><br><span class="dive-text"> Dive into my work here!</span></h1>
         </div>
         <div class="important-icon">     
             <a href="https://www.linkedin.com/in/qianqian9712/"><i class="fa-brands fa-linkedin"></i></a>
